# pyhdfs

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE.rst  MANIFEST.in  README.rst  dev_requirements.txt  generate_class_from_json.py  install-hdfs.sh  pyhdfs.py  setup.cfg  setup.py  test_pyhdfs.py  test_tools.py
.github/workflows/: ci.yml
doc/: Makefile  conf.py  index.rst  modules.rst  pyhdfs.rst
pyhdfs/: __init__.py  py.typed
test-hdfs-conf/: core-site.xml
travis-hdfs-conf/: core-site.xml  hadoop-env.sh  hdfs-site.xml
