[metadata]
name = PyHDFS
description = Pure Python HDFS client
long_description = file: README.rst
url = https://github.com/jingw/pyhdfs
author = Jing Wang
author_email = 99jingw@gmail.com
license = MIT License
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: System :: Filesystems

[options]
install_requires =
    requests
    simplejson
python_requires = >=3.6
packages = pyhdfs

[options.package_data]
pyhdfs = py.typed

[egg_info]
tag_build = dev

[tool:isort]
profile = black
case_sensitive = true
force_single_line = true
order_by_type = false

[tool:pytest]
addopts = --random --tb=short --cov pyhdfs --cov test_pyhdfs --cov-report html --cov-report term
norecursedirs = env
python_files = test_*.py
filterwarnings =
    error

[flake8]
max-line-length = 100
# for black compatibility
extend-ignore = E203

[mypy]
ignore_missing_imports = true

disallow_any_unimported = true
# disallow_any_expr = true
disallow_any_decorated = true
# disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

no_implicit_optional = true
strict_optional = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

strict_equality = true

show_error_codes = true

warn_unused_configs = true
